crates/tldr-core/tests/fixtures/fix/javascript/not_a_function.error.txt
/app/app.js:2
const count = items.length();
                          ^
TypeError: items.length is not a function
    at Object.<anonymous> (/app/app.js:2:27)
